...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n0A-kf-qwS">
                                <rect key="frame" x="85" y="154.5" width="150" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="150" id="FAv-07-ODu"/>
                                    <constraint firstAttribute="height" constant="30" id="cCa-xT-Te1"/>
                                </constraints>
                                <state key="normal" title="Navigate to VC 1"/>
                                <connections>
                                    <segue destination="eXa-AN-zMc" kind="show" id="zRY-5J-hfm"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start View Controller" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jco-Zr-i4F">
                                <rect key="frame" x="80.5" y="94" width="159" height="20.5"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jy6-0g-fUc">
                                <rect key="frame" x="85" y="274.5" width="150" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="R5C-YL-Qsn"/>
                                    <constraint firstAttribute="width" constant="150" id="mRB-HC-8s4"/>
                                </constraints>
                                <state key="normal" title="Navigate to VC 3"/>
                                <connections>
                                    <segue destination="W1C-Dp-Asa" kind="show" id="5EM-7k-A2W"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0zA-Jg-yi6">
                                <rect key="frame" x="85" y="334.5" width="150" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Hnm-5h-iWq"/>
                                    <constraint firstAttribute="width" constant="150" id="xNf-0v-SSD"/>
                                </constraints>
                                <state key="normal" title="Navigate to VC 4"/>
                                <connections>
                                    <segue destination="d0T-wd-pW9" kind="show" id="cLF-2i-AGk"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hc4-i0-Hzy">
                                <rect key="frame" x="85" y="214.5" width="150" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="rDR-19-nhq"/>
                                    <constraint firstAttribute="width" constant="150" id="txs-Ii-8ls"/>
                                </constraints>
                                <state key="normal" title="Navigate to VC 2"/>
                                <connections>
                                    <segue destination="klZ-Rs-1GM" kind="show" id="CdY-2m-zLn"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
...
